# depsly

./: .gitignore  ARCHITECTURE.md  BLAST_RADIUS_IMPLEMENTATION.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  DECISIONS.md  DEV_LOG.md  DOCUMENTATION_INDEX.md  GRAPH_ENGINE_TODO.md  MASTER_FEATURE_LIST.md  PRD.md  README.md  ROADMAP.md  SECURITY_CHECKLIST.md  SIMULATE_REPLACE_DESIGN.md  STEP_2_SIMULATE_REMOVE.md  STEP_3_SCORING_MODULE.md  STEP_4_JSON_OUTPUT.md  TELEMETRY.md  api.py  cli.py  depsly_codex_task_breakdown.md  depsly_master_bundle.md  depsly_prd.md  depsly_tech_spec.md  pyproject.toml  requirements.txt
core/: analyze.py  batch.py  classify.py  export.py  graph.py  ingestion.py  models.py  recommend.py  resolve.py  scan.py  scoring.py  simulate.py  storage.py  telemetry.py  telemetry_aggregate.py  telemetry_ingest.py  trace.py  visualize.py
docs/: graph_semantics.md  implemented_features_by_commit.md  origin.md  telemetry_backend_contract.md  telemetry_db_schema.sql  telemetry_deployment.md  telemetry_event_schema.json  telemetry_implementation_plan.md  telemetry_prompt_copy.md
scripts/: scan_repos.py  telemetry_aggregate.py  telemetry_cleanup.py  telemetry_ingest_server.py  telemetry_maintenance.py  telemetry_publish_reports.py
tests/: test_analyze.py  test_batch.py  test_classify.py  test_cli_analyze.py  test_cli_graph_html.py  test_cli_json.py  test_cli_recommend.py  test_cli_save_scan.py  test_cli_scan_history.py  test_cli_telemetry.py  test_cli_trace.py  test_graph.py  test_ingestion.py  test_models.py  test_package_scoring.py  test_recommend.py  test_trace.py  (+12 more)
(+6 files in other folders)
