[build-system]
requires = ["setuptools>=68.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depsly"
version = "0.1.11"
description = "Local-first dependency decision CLI for JS/TS projects"
authors = [{ name = "Sabri Shiraz" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
depsly = "cli:cli"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.package-data]
core = ["data/*.json"]
